# internal/api/admin_handlers.go
@@ -1090,6 +1090,7 @@ func (h *AdminHandlers) RegisterRoutes(adminGroup *gin.RouterGroup) {
 		tenants.PUT("/:id/instances/:instance_id/status", h.UpdateWalletInstanceStatus)
 		tenants.DELETE("/:id/instances/:instance_id", h.DeleteWalletInstance)
 		tenants.GET("/:id/users/:user_id/instances", h.ListWalletInstancesByUser)
+		tenants.POST("/:id/users/:user_id/instances/revoke-all", h.RevokeAllWalletInstancesForUser)
 	}
 }
 
